--- a/Views/Hospital/Update.cshtml
+++ b/Views/Hospital/Update.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = $"Atualizar endereço {@Model.Id}";
 }
 
+<a href="/Hospital/Index" class="btn btn-light">< Voltar</a>
+
 <h1 class="mb-3">@ViewData["Title"]</h1>
 <p class="mb-4">Utilize o formulário abaixo para atualizar a unidade @Model.Id.</p>
 
