--- a/Views/Anamnesis/Update.cshtml
+++ b/Views/Anamnesis/Update.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = $"Atualizar anamnese {@Model.Id}";
 }
 
+<a href="/Anamnesis/Index" class="btn btn-light">< Voltar</a>
+
 <h1 class="mb-3">@ViewData["Title"]</h1>
 <p class="mb-4">Utilize o formulário abaixo para atualizar a anamnese @Model.Id.</p>
 
