--- a/Views/Patient/Update.cshtml
+++ b/Views/Patient/Update.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = $"Atualizar paciente {@Model.Id}";
 }
 
+<a href="/Patient/Index" class="btn btn-light">< Voltar</a>
+
 <h1 class="mb-3">@ViewData["Title"]</h1>
 <p class="mb-4">Utilize o formulário abaixo para atualizar o paciente @Model.Id.</p>
 
