--- a/Views/Tutor/Update.cshtml
+++ b/Views/Tutor/Update.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = $"Atualizar tutor {@Model.Id}";
 }
 
+<a href="/Tutor/Index" class="btn btn-light">< Voltar</a>
+
 <h1 class="mb-3">@ViewData["Title"]</h1>
 <p class="mb-4">Utilize o formulário abaixo para atualizar o tutor @Model.Id.</p>
 
