--- a/Views/Doctor/Update.cshtml
+++ b/Views/Doctor/Update.cshtml
@@ -24,7 +24,7 @@
     </div>
     <div class="col-md-5">
         <label for="cpf" class="form-label">CPF</label>
-        <input type="text" class="form-control" name="cpf" id="cpf" value="@Model.Cpf" required>
+        <input type="text" class="form-control" name="cpf" id="cpf" value="@Model.Cpf" required readonly>
     </div>
     <div class="col-md-2">
         <label for="addressId" class="form-label">Endereço Id</label>
